--- a/code/Roiger Intern Project Preliminary Code.Rmd
+++ b/code/Roiger Intern Project Preliminary Code.Rmd
@@ -45,7 +45,7 @@ latlon <- lapply(uniquePlotIDs, get_NEON_location, output="latlon")
 ## convert list into data.frame
 latlon.df <- do.call(rbind, latlon)
 ## matching the names of your columns
-names(latlon.df) <- c("uniquePlotIDs", "lat", "lon", "northing", "easting", "utmZone", "elevation") 
+names(latlon.df) <- c("uniquePlotIDs", "lat", "lon", "northing", "easting", "utmZone", "elevation", "NLCDclass") 
 
 #Removing datapoint with lat lon listed as 1,1
 latlon.df[latlon.df==1]<-NA
@@ -60,7 +60,7 @@ trap$lat2<-ifelse(is.na(trap$lat)==TRUE, trap$pdaDecimalLatitude,trap$lat)
 trap$lon2<-ifelse(is.na(trap$lon)==TRUE, trap$pdaDecimalLongitude,trap$lon)
 
 #Creating a dataframe with only the unique plotIDs and lat2 lon2 data for merging
-uniquetrap<-trap[!duplicated(trap[,1]),c("uniquePlotIDs","lat2","lon2")]
+uniquetrap<-trap[!duplicated(trap[,1]),c("uniquePlotIDs","lat2","lon2", "elevation","NLCDclass")]
 
 # Merge ID with sort
 cols = colnames(sort)[!colnames(sort)%in%colnames(id)]
@@ -71,7 +71,7 @@ id <- left_join(id, sort[, c('subsampleID', cols)],
 id$plotID<-as.character(id$plotID)
 
 #Merging id df with lat2 lon2 data
-id <- merge(x = uniquetrap, y = id, by.y = "plotID", by.x = "uniquePlotIDs")
+id <- merge(x = uniquetrap, y = id, by.y = "plotID", by.x = "uniquePlotIDs", all.y = TRUE)
 
 # Get zero traps from trapping
 new_trap<- trap[!trap$sampleID %in% id$sampleID & trap$targetTaxaPresent=="N",]
@@ -150,7 +150,7 @@ idsmall<-dplyr::filter(id, id$Year %in% c(2014,2016))
 #If I merge dataframes then it automatically removes the null plot ID
 
 #Creation of a dataframe that maps plotIds to number of unique scientific names
-specrich <- ddply(idsmall, ~ uniquePlotIDs + date + Year + HoursOfTrapping + Precipmm + Max.TempC, summarize, num_species = length(scientificName))
+specrich <- ddply(idsmall, ~ uniquePlotIDs + domainid + date + Year + HoursOfTrapping + Precipmm + Max.TempC, summarize, num_species = length(scientificName))
 
 #Merging to get lat2 lon2 data
 specrich <- merge(x = uniquetrap, y = specrich, by.y = "uniquePlotIDs", by.x = "uniquePlotIDs")
@@ -159,18 +159,14 @@ specrich <- merge(x = uniquetrap, y = specrich, by.y = "uniquePlotIDs", by.x = "
 specrich$lat2<-as.numeric(specrich$lat2)
 specrich$date<-as.Date(specrich$date)
 
+#Creating a Continental indicator variable
+specrich$Continental <- ifelse(specrich$domainid %in% c('D18', 'D19'), 'Alaska', ifelse(specrich$domainid == 'D04', 'Puerto Rico', 'Continental U.S'))
 
 #Preliminary graph of latitude by species richness overall
 ggplot(specrich,aes(lat2, num_species))+
-  geom_point(aes(colour = Year))+
+  geom_point(aes(colour = Year), size = 2)+
   labs(x = "Latitude", y = "Number of Species")+
   ggtitle("Species Richness by Latitude")
-
-ggplot(specrich, aes( HoursOfTrapping, num_species))+
-  geom_point()+
-  labs(x = "Hours of Trapping", y = "Number of Species")+
-  ggtitle("Species Richness by Hours of Trapping")
-
 
 #Preliminary graph of latitude vs. maximum temp
 ggplot(specrich, aes(lat2, Max.TempC))+
@@ -185,7 +181,7 @@ ggplot(specrich, aes(lat2, Precipmm))+
   ggtitle("Latitude by Precipitation")
 
 ggplot(specrich, aes(Max.TempC, num_species))+
-  geom_point(aes(color = lat2))+
+  geom_point(aes(color = Continental), size = 2)+
   labs(x = "Maximum Temperature in Celsius", y = "Number of Species")+
   ggtitle("Species Richness by Maximum Temperature")
 
@@ -194,6 +190,9 @@ ggplot(specrich, aes(Precipmm, num_species))+
   labs(x = "Precipitation in Millimeters", y = "Number of Species")+
   ggtitle("Species Richness by Precipitation")
 
+# ggplot(specrich, aes(NLCDclass, num_species))+
+#   geom_jitter(aes(color = NLCDclass))+
+#   scale_x_discrete(labels = c("evergreenForest" = "EGF", "woodyWetlands" = "WWK", "emergentHerbaceousWetlands" = "EHWL", "grasslandHerbaceous" = "GLH","deciduousForest" = "DF", "shrubScrub"= "SS", "mixedForest"= "MF", "pastureHay" = "PH", "cultivatedCrops" = "CC", "dwarfScrub" = "DS", "NA" = "NA"))
 
 #Preliminary graph of Species Richness vs. Time for 2016
 # ggplot(specrich, aes(month(collectDate, label=TRUE, abbr=TRUE), 
@@ -213,38 +212,38 @@ ggplot(specrich, aes(Precipmm, num_species))+
 # gganimate(testgif, interval = 0.5, 'output.gif')
 
 #Preliminary graph of maximum temp versus date for 2016
-M.Temp2014<-ggplot(specrich[specrich$Year==2014,], aes(date, Max.TempC))+
-  geom_point(colour = 'blue')+
-  labs(x = "Date of Collection", y = "Maximum Temperature")+
-  scale_y_continuous(limits = c(0,45))+
-  scale_x_date(labels = date_format("%m-%Y"), date_breaks = "1 month", limits = as.Date(c("2014-05-01","2014-12-01")))+
-  ggtitle("Maximum Temperature in Celsius vs. Date of Collection for 2014")
-
-M.Temp2016<-ggplot(specrich[specrich$Year==2016,], aes(date, Max.TempC))+
-  geom_point(colour = 'green')+
-  labs(x = "Date of Collection", y = "Maximum Temperature")+
-  scale_y_continuous(limits = c(0,45))+
-  scale_x_date(labels = date_format("%m-%y"), date_breaks = "1 month", limits = as.Date(c("2016-05-01","2016-12-01")))+
-  ggtitle("Maximum Temperature in Celsius vs. Date of Collection for 2016")
-
-grid.arrange(M.Temp2014, M.Temp2016)
-
-######
-M.precip2014<-ggplot(specrich[specrich$Year==2014,], aes(lat2, Precipmm))+
-  geom_point(colour = 'blue')+
-  labs(x = "Date of Collection", y = "Maximum Temperature")+
-  # scale_y_continuous(limits = c(0,45))+
-  # scale_x_date(labels = date_format("%m-%Y"), date_breaks = "1 month", limits = as.Date(c("2014-05-01","2014-12-01")))+
-  ggtitle("Maximum Temperature in Celsius vs. Date of Collection for 2014")
-
-M.precip2016<-ggplot(specrich[specrich$Year==2016,], aes(lat2, Precipmm))+
-  geom_point(colour = 'green')+
-  labs(x = "Date of Collection", y = "Maximum Temperature")+
-  # scale_y_continuous(limits = c(0,45))+
-  # scale_x_date(labels = date_format("%m-%y"), date_breaks = "1 month", limits = as.Date(c("2016-05-01","2016-12-01")))+
-  ggtitle("Maximum Temperature in Celsius vs. Date of Collection for 2016")
-
-grid.arrange(M.precip2014, M.precip2016)
+# M.Temp2014<-ggplot(specrich[specrich$Year==2014,], aes(date, Max.TempC))+
+#   geom_point(colour = 'blue')+
+#   labs(x = "Date of Collection", y = "Maximum Temperature")+
+#   scale_y_continuous(limits = c(0,45))+
+#   scale_x_date(labels = date_format("%m-%Y"), date_breaks = "1 month", limits = as.Date(c("2014-05-01","2014-12-01")))+
+#   ggtitle("Maximum Temperature in Celsius vs. Date of Collection for 2014")
+# 
+# M.Temp2016<-ggplot(specrich[specrich$Year==2016,], aes(date, Max.TempC))+
+#   geom_point(colour = 'green')+
+#   labs(x = "Date of Collection", y = "Maximum Temperature")+
+#   scale_y_continuous(limits = c(0,45))+
+#   scale_x_date(labels = date_format("%m-%y"), date_breaks = "1 month", limits = as.Date(c("2016-05-01","2016-12-01")))+
+#   ggtitle("Maximum Temperature in Celsius vs. Date of Collection for 2016")
+# 
+# grid.arrange(M.Temp2014, M.Temp2016)
+# 
+# ######
+# M.precip2014<-ggplot(specrich[specrich$Year==2014,], aes(lat2, Precipmm))+
+#   geom_point(colour = 'blue')+
+#   labs(x = "Date of Collection", y = "Maximum Temperature")+
+#   # scale_y_continuous(limits = c(0,45))+
+#   # scale_x_date(labels = date_format("%m-%Y"), date_breaks = "1 month", limits = as.Date(c("2014-05-01","2014-12-01")))+
+#   ggtitle("Maximum Temperature in Celsius vs. Date of Collection for 2014")
+# 
+# M.precip2016<-ggplot(specrich[specrich$Year==2016,], aes(lat2, Precipmm))+
+#   geom_point(colour = 'green')+
+#   labs(x = "Date of Collection", y = "Maximum Temperature")+
+#   # scale_y_continuous(limits = c(0,45))+
+#   # scale_x_date(labels = date_format("%m-%y"), date_breaks = "1 month", limits = as.Date(c("2016-05-01","2016-12-01")))+
+#   ggtitle("Maximum Temperature in Celsius vs. Date of Collection for 2016")
+# 
+# grid.arrange(M.precip2014, M.precip2016)
 
 
 ```
@@ -336,6 +335,7 @@ tarssmall <- merge(x = tarstax.df, y = tarssmall, by.x = "domainID", by.y = "dom
 
 tarssmall$lat2<- as.numeric(tarssmall$lat2)
 tarssmall$lon2<- as.numeric(tarssmall$lon2)
+
 #number of sites of appearance
 length(unique(tars$uniquePlotIDs)) #160
 length(unique(tars2013$uniquePlotIDs)) #35
@@ -364,42 +364,50 @@ tars.firstplot <- tarssmall[match(unique(tarssmall$uniquePlotIDs), tarssmall$uni
 # Visualizations for domains, sites and plots where cx. tarsalis is present
 tars2016$date<-as.Date(tars2016$date)
 tars2014$date<-as.Date(tars2014$date)
+tars2013$date<-as.Date(tars2013$date)
 
+# Abundance of Culex tarsalis for 2014 and 2016
 plot2016 <-ggplot(tars2016, aes(as.Date(date), as.numeric(individualCount)))+
-  geom_point(color = "darkblue")+
-  labs(x = "Date", y = "Count of Culex tarsalis")+
+  geom_point(color = "darkblue", size = 2)+
+  scale_y_continuous(limits = c(0,305))+
+  labs(x = "Date", y = "Abundance of Culex tarsalis")+
   scale_x_date(labels = date_format("%m-%Y"), date_breaks = "1 month")+
-  ggtitle("Date versus Count of Culex tarsalis for 2016")
+  ggtitle("Date versus Abundance of Culex tarsalis for 2016")
 plot2014 <-ggplot(tars2014, aes(as.Date(date), as.numeric(individualCount)))+
-  geom_point(color = "pink")+
+  geom_point(color = "pink", size = 2)+
+  scale_y_continuous(limits = c(0, 305))+
   scale_x_date(labels = date_format("%m-%Y"), date_breaks = "1 month", limits = as.Date(c("2014-05-01","2014-11-01")))+
-  labs(x = "Date", y = "Count of Culex tarsalis")+
-  ggtitle("Date versus Count of Culex tarsalis for 2014")
+  labs(x = "Date", y = "Abundance of Culex tarsalis")+
+  ggtitle("Date versus Abundance of Culex tarsalis for 2014")
 
 grid.arrange(plot2014,plot2016)
 
+# Maximum temperature for 2014 and 2016
 tempplot2016 <-ggplot(tars2016, aes(as.Date(date), as.numeric(Max.TempC)))+
-  geom_point(color = "light green")+
+  geom_point(color = "light green", size = 2)+
   labs(x = "Date", y = "Maximum Temperature in C")+
   scale_x_date(labels = date_format("%m-%Y"), date_breaks = "1 month")+
   ggtitle("Date versus Maximum Temperature for 2016")
 tempplot2014 <-ggplot(tars2014, aes(as.Date(date), as.numeric(Max.TempC)))+
-  geom_point(color = "purple")+
+  geom_point(color = "purple", size = 2)+
   scale_x_date(labels = date_format("%m-%Y"), date_breaks = "1 month", limits = as.Date(c("2014-05-01","2014-11-01")))+
   labs(x = "Date", y = "Maximum Temperature in C")+
   ggtitle("Date versus Maximum Temperature for 2014")
 
 grid.arrange(tempplot2014, tempplot2016)
 
+#Plot comparison between temperature and abundance
 grid.arrange(tempplot2016, plot2016)
 
-q <-ggplot(tarssmall, aes(as.numeric(lat2), as.Date(date), frame = date))+
-      geom_point(aes(color= Year))+
-      scale_y_date(labels = date_format("%m-%Y"), date_breaks = "1 month", limits = as.Date(c("2014-05-01","2016-11-01")))+
-      scale_x_continuous(limits = c(30,65))+
-      ggtitle("Date versus Latitude for 2016")
+#Abundance of Culex tarsalis by NLCD Class Code
+ggplot(tarssmall, aes(NLCDclass, as.numeric(newindividualCount)))+
+  geom_col(aes(fill = NLCDclass))+
+  guides(fill = FALSE)+
+  labs(x = "NLCD Class Code", y = "Abundance of Culex tarsalis")+
+  ggtitle("Abundance of Culex tarsalis by NLCD Class Code")
+  
+tally(id$NLCDclass)
 
-# gg + geom_point(data = tars.firstdomain, aes(lon2,lat2, fill = domainID))
 
 ```
 
